@@ -138,6 +138,9 @@ Trunk (unreleased changes)
 
   BUG FIXES
 
+    HDFS-132. Fix namenode to not report files deleted metrics for deletions
+    done while replaying edits during startup. (suresh)
+
     HDFS-913. Rename fault injection test TestRename.java to TestFiRename.java
     to include it in tests run by ant target run-test-hdfs-fault-inject.
     (suresh)
